cluster-config/nginx-ingress.yaml
---
# Source: nginx-ingress/templates/controller-service.yaml

apiVersion: v1
kind: Service
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "contosofinsvcsubnet"
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.24.4
    component: "controller"
    heritage: Tiller
    release: nginx-ingress
  name: nginx-ingress-controller
  namespace: ingress
spec:
  clusterIP: ""
  loadBalancerIP: "100.64.2.232"
  externalTrafficPolicy: "Cluster"
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: nginx-ingress
    component: "controller"
    release: nginx-ingress
  type: "LoadBalancer"

---
# Source: nginx-ingress/templates/default-backend-service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.24.4
    component: "default-backend"
    heritage: Tiller
    release: nginx-ingress
  name: nginx-ingress-default-backend
  namespace: ingress
spec:
  clusterIP: ""
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: nginx-ingress
    component: "default-backend"
    release: nginx-ingress
  type: "ClusterIP"

---
# Source: nginx-ingress/templates/controller-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.24.4
    component: "controller"
    heritage: Tiller
    release: nginx-ingress
  name: nginx-ingress-controller
  namespace: ingress
spec:
  selector:
    matchLabels:
      app: nginx-ingress
      release: nginx-ingress
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    {}
    
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app: nginx-ingress
        component: "controller"
        release: nginx-ingress
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: nginx-ingress-controller
          image: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.26.1"
          imagePullPolicy: "IfNotPresent"
          args:
            - /nginx-ingress-controller
            - --default-backend-service=ingress/nginx-ingress-default-backend
            - --election-id=ingress-controller-leader
            - --ingress-class=nginx
            - --configmap=ingress/nginx-ingress-controller
          securityContext:
            capabilities:
                drop:
                - ALL
                add:
                - NET_BIND_SERVICE
            runAsUser: 33
            allowPrivilegeEscalation: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 300m
              memory: 300Mi
            
      hostNetwork: false
      nodeSelector:
        beta.kubernetes.io/os: linux
        
      serviceAccountName: nginx-ingress
      terminationGracePeriodSeconds: 60

---
# Source: nginx-ingress/templates/default-backend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.24.4
    component: "default-backend"
    heritage: Tiller
    release: nginx-ingress
  name: nginx-ingress-default-backend
  namespace: ingress
spec:
  selector:
    matchLabels:
      app: nginx-ingress
      release: nginx-ingress
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: nginx-ingress
        component: "default-backend"
        release: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-default-backend
          image: "k8s.gcr.io/defaultbackend-amd64:1.5"
          imagePullPolicy: "IfNotPresent"
          args:
          securityContext:
            runAsUser: 65534
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
            
      nodeSelector:
        beta.kubernetes.io/os: linux
        
      serviceAccountName: nginx-ingress-backend
      terminationGracePeriodSeconds: 60

---
# Source: nginx-ingress/templates/addheaders-configmap.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/job-patch/clusterrole.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/job-patch/clusterrolebinding.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/job-patch/job-createSecret.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/job-patch/job-patchWebhook.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/job-patch/psp.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/job-patch/role.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/job-patch/rolebinding.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/job-patch/serviceaccount.yaml


---
# Source: nginx-ingress/templates/admission-webhooks/validating-webhook.yaml


---
# Source: nginx-ingress/templates/controller-configmap.yaml


---
# Source: nginx-ingress/templates/controller-daemonset.yaml


---
# Source: nginx-ingress/templates/controller-hpa.yaml


---
# Source: nginx-ingress/templates/controller-metrics-service.yaml


---
# Source: nginx-ingress/templates/controller-poddisruptionbudget.yaml


---
# Source: nginx-ingress/templates/controller-prometheusrules.yaml


---
# Source: nginx-ingress/templates/controller-psp.yaml


---
# Source: nginx-ingress/templates/controller-servicemonitor.yaml


---
# Source: nginx-ingress/templates/controller-webhook-service.yaml


---
# Source: nginx-ingress/templates/default-backend-poddisruptionbudget.yaml


---
# Source: nginx-ingress/templates/default-backend-psp.yaml

---
# Source: nginx-ingress/templates/default-backend-role.yaml

---
# Source: nginx-ingress/templates/default-backend-rolebinding.yaml

---
# Source: nginx-ingress/templates/proxyheaders-configmap.yaml


---
# Source: nginx-ingress/templates/tcp-configmap.yaml


---
# Source: nginx-ingress/templates/udp-configmap.yaml
